# streamlit_test

./: app.py  pyproject.toml  requirements.txt
pages/: 1_inference_and_evaluation.py
src/backend/: async_trial.py  model_providers.py  prompts.py  utils.py
src/backend/3_llm_analysis_backend/: llm_thread_detection_from_video.py
src/backend/factories/: api_keys_factory.py  llm_factory.py  llm_messages_factory.py  logging_config.py  prompts_factory.py
src/fronted/: app.py  report_utils.py  utils.py
src/fronted/pages/: 1_video.py  2_inference_simulator.py  3_llm_analysis.py  4_latency_simulator.py  5_llm_frames_grid_analysis.py  6_evaluation_tests.py
