[tool.poetry]
name = "poetry test"
version = "0.1.0"
description = "A Streamlit app that analyzes video frames using GPT"
authors = ["Your Name <your.email@example.com>"]
package-mode = false


[tool.poetry.dependencies]
python = ">=3.10"
streamlit = "^1.32.0"
python-dotenv = "^1.0.1"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
